# humf

./: .gitignore  .gitlab-ci.yml  README.md  pyproject.toml
notebooks/: try_broadcasting.ipynb  try_connected_components.ipynb  try_indexing.ipynb  try_matmul.ipynb  try_neighbor_list.ipynb  try_repeat.ipynb
src/humf/data/: ase_dataset.py  utils.py
src/humf/data/filters/: has_no_nans.py
src/humf/data/transforms/: radius_graph_pbc.py
src/humf/layers/: force_field.py  humf.py  humf_no_classifier.py  taylor_polynomial.py
src/humf/layers/energy/: coulomb.py  interacting_sites.py  lennard_jones.py  lennard_jones_coulomb.py  tip3p_like.py  utils.py
src/humf/layers/interaction_classifier/: distance_based_classifier.py
src/humf/layers/interaction_site_energy/: pairwise_site_interaction.py
src/humf/layers/interaction_sites/: atom_centered_static.py  atom_centered_static_sites.py  atom_centered_taylor.py
src/humf/layers/molecule_classifier/: manual_classifier.py
src/humf/layers/pair_energy/: inverse_distance_polynomial.py  lennard_jones.py
src/humf/models/: force_field.py  lit_force_field.py
src/humf/transforms/: radius_graph_pbc.py
tests/: test_pytest_setup.py
tests/data/: test_ase_dataset.py
tests/inputs/data/raw/: dataset.xyz
tests/layers/interaction_classifier/: test_distance_based_classifier.py
tests/layers/interaction_site_energy/pair_energy/: test_coulomb.py  test_inverse_distance_polynomial.py  test_lennard_jones.py  (+1 more)
tests/layers/interaction_sites/: test_atom_centered_static_sites.py
tests/layers/molecule_classifier/: test_manual_classifier.py
(+4 files in other folders)
