[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "humf"
version = "0.1.0"
description = ""
authors = ["Niklas Kappel <niklas.kappel@kit.edu>"]
readme = "README.md"
packages = [{ include = "humf", from = "src" }]

[tool.poetry.dependencies]
python = "~3.11"
torch = "^2.3.1"
torchvision = "^0.18.1"
torchaudio = "^2.3.1"
torch-geometric = "^2.5.3"
lightning = "^2.3.3"
scipy = "^1.14.0"
matscipy = "^1.0.0"
numpy = "~1"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.7.1"
pytest = "^8.2.1"
ipykernel = "^6.29.5"
